# LuciaArchitecture

./: .gitignore  CMakeLists.txt  README.md  README_old.md  a.out  common.mk  config.mk  lucia  lucia.conf  makefile  test.cpp
app/: CMakeLists.txt  a.out  makefile  nginx.cpp
app/dlink_obj/: cia_conf.d  cia_daemon.d  cia_func.d  cia_kernal_func.d  cia_log.d  cia_process_cycle.d  cia_process_events_and_timers.d  cia_setproctitle.d  cia_singal.d  cia_socket.d  cia_socket_process.d  nginx.d
code_statistics/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
config/: log4cpp.properties  lucia.conf  mime.types
datapoll/: CMakeLists.txt  cia_datapoll.cpp  cia_datapoll.h
exec.dSYM/Contents/Resources/DWARF/: exec
headers/: cia_comm.h  cia_conf.h  cia_datapoll.h  cia_func.h  cia_global.h  cia_kernal_func.h  cia_log.h  cia_operation.h  cia_parser.h  cia_response_header.h  cia_signal.h  cia_socket.h  cia_threadpoo.h  header.h  http_parser.h.gch
http-parser-master/: CMakeLists.txt  a.out  cia_parser.cpp  http_parser.cpp  test.c
logs/: CMakeLists.txt  cia_kernal_func.cpp  cia_kernal_func.h  cia_log.cpp  cia_log.h
lucia.dSYM/Contents/: Info.plist
lucia.dSYM/Contents/Resources/DWARF/: lucia
net/: CMakeLists.txt  cia_comm.h  cia_response_header.h  cia_socket.cpp  cia_socket.h  cia_socket_accept.cpp  cia_socket_http.cpp  cia_socket_operator.cpp  cia_socket_post.cpp  cia_socket_process.cpp  cia_socket_request.cpp  cia_socket_response.cpp
operation/: CMakeLists.txt  cia_operation.cpp
proc/: CMakeLists.txt  cia_daemon.cpp  cia_process_cycle.cpp  cia_process_events_and_timers.cpp
resource/git/: picture.pptx
resource/static/: 404.html
signal/: CMakeLists.txt  cia_singal.cpp  makefile
threadpoll/: CMakeLists.txt  cia_threadpoll.cpp  cia_threadpoo.h
tools/: CMakeLists.txt  cia_conf.cpp  cia_conf.h  cia_func.cpp  cia_setproctitle.cpp  cia_setproctitle.h
